--- a/SampleNativeCOMAddin.vcxproj
+++ b/SampleNativeCOMAddin.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{4620DC3F-0F3D-471C-B2AA-4F6E19DDD2B7}</ProjectGuid>
     <RootNamespace>SampleNativeCOMAddin</RootNamespace>
     <Keyword>AtlProj</Keyword>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
